force-app/main/default/objects/Project__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>