force-app/main/default/objects/Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <formula>Owner:User.FirstName + &#39; &#39;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>