force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Programme__c</columns>
    <columns>Project_Code__c</columns>
    <columns>Description__c</columns>
    <columns>Project_Sponsor__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>